--- a/project.ipynb
+++ b/project.ipynb
@@ -446,6 +446,118 @@
                         "# Check the final dataframe\n",
                         "sampled_dataset_ohe.info()"
                   ]
+            },
+            {
+                  "cell_type": "markdown",
+                  "metadata": {},
+                  "source": [
+                        "### Create and Fit the Model"
+                  ]
+            },
+            {
+                  "cell_type": "code",
+                  "execution_count": null,
+                  "metadata": {},
+                  "outputs": [],
+                  "source": [
+                        "# Import essential models and functions from sklearn\n",
+                        "from sklearn.tree import DecisionTreeClassifier\n",
+                        "from sklearn.model_selection import train_test_split\n",
+                        "from sklearn.metrics import confusion_matrix\n",
+                        "from sklearn.tree import plot_tree\n",
+                        "\n",
+                        "# Extract Response and Predictors\n",
+                        "y = pd.DataFrame(sampled_dataset_ohe['popularity_level'])\n",
+                        "X = pd.DataFrame(sampled_dataset_ohe.drop('popularity_level', axis = 1))\n",
+                        "\n",
+                        "# Split the Dataset into Train and Test\n",
+                        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3)\n",
+                        "\n",
+                        "# Decision Tree using Train Data\n",
+                        "dectree = DecisionTreeClassifier(max_depth = 4)  # change max_depth to experiment\n",
+                        "dectree.fit(X_train, y_train)                    # train the decision tree model\n",
+                        "\n",
+                        "# Plot the trained Decision Tree\n",
+                        "f = plt.figure(figsize=(48,48))\n",
+                        "plot_tree(dectree, filled=True, rounded=True, \n",
+                        "          feature_names=list(X_train.columns))"
+                  ]
+            },
+            {
+                  "cell_type": "markdown",
+                  "metadata": {},
+                  "source": [
+                        "### Check the accuracy of the Model"
+                  ]
+            },
+            {
+                  "cell_type": "code",
+                  "execution_count": null,
+                  "metadata": {},
+                  "outputs": [],
+                  "source": [
+                        "# Predict the Response corresponding to Predictors\n",
+                        "y_train_pred = dectree.predict(X_train)\n",
+                        "\n",
+                        "# Print the Classification Accuracy\n",
+                        "print(\"Train Data\")\n",
+                        "print(\"Accuracy  :\\t\", dectree.score(X_train, y_train))\n",
+                        "print()\n",
+                        "\n",
+                        "# Print the Accuracy Measures from the Confusion Matrix\n",
+                        "cmTrain = confusion_matrix(y_train, y_train_pred)\n",
+                        "tpTrain = cmTrain[1][1] # True Positives : Good (1) predicted Good (1)\n",
+                        "fpTrain = cmTrain[0][1] # False Positives : Bad (0) predicted Good (1)\n",
+                        "tnTrain = cmTrain[0][0] # True Negatives : Bad (0) predicted Bad (0)\n",
+                        "fnTrain = cmTrain[1][0] # False Negatives : Good (1) predicted Bad (0)\n",
+                        "\n",
+                        "print(\"TPR Train :\\t\", (tpTrain/(tpTrain + fnTrain)))\n",
+                        "print(\"TNR Train :\\t\", (tnTrain/(tnTrain + fpTrain)))\n",
+                        "print()\n",
+                        "\n",
+                        "print(\"FPR Train :\\t\", (fpTrain/(tnTrain + fpTrain)))\n",
+                        "print(\"FNR Train :\\t\", (fnTrain/(tpTrain + fnTrain)))\n",
+                        "\n",
+                        "# Plot the two-way Confusion Matrix\n",
+                        "sb.heatmap(confusion_matrix(y_train, y_train_pred), \n",
+                        "           annot = True, fmt=\".0f\", annot_kws={\"size\": 18})"
+                  ]
+            },
+            {
+                  "cell_type": "code",
+                  "execution_count": null,
+                  "metadata": {},
+                  "outputs": [],
+                  "source": [
+                        "# Import the required metric from sklearn\n",
+                        "from sklearn.metrics import confusion_matrix\n",
+                        "\n",
+                        "# Predict the Response corresponding to Predictors\n",
+                        "y_test_pred = dectree.predict(X_test)\n",
+                        "\n",
+                        "# Print the Classification Accuracy\n",
+                        "print(\"Test Data\")\n",
+                        "print(\"Accuracy  :\\t\", dectree.score(X_test, y_test))\n",
+                        "print()\n",
+                        "\n",
+                        "# Print the Accuracy Measures from the Confusion Matrix\n",
+                        "cmTest = confusion_matrix(y_test, y_test_pred)\n",
+                        "tpTest = cmTest[1][1] # True Positives : Good (1) predicted Good (1)\n",
+                        "fpTest = cmTest[0][1] # False Positives : Bad (0) predicted Good (1)\n",
+                        "tnTest = cmTest[0][0] # True Negatives : Bad (0) predicted Bad (0)\n",
+                        "fnTest = cmTest[1][0] # False Negatives : Good (1) predicted Bad (0)\n",
+                        "\n",
+                        "print(\"TPR Test :\\t\", (tpTest/(tpTest + fnTest)))\n",
+                        "print(\"TNR Test :\\t\", (tnTest/(tnTest + fpTest)))\n",
+                        "print()\n",
+                        "\n",
+                        "print(\"FPR Test :\\t\", (fpTest/(fpTest + tnTest)))\n",
+                        "print(\"FNR Test :\\t\", (fnTest/(fnTest + tpTest)))\n",
+                        "\n",
+                        "# Plot the two-way Confusion Matrix\n",
+                        "sb.heatmap(confusion_matrix(y_test, y_test_pred), \n",
+                        "           annot = True, fmt=\".0f\", annot_kws={\"size\": 18})"
+                  ]
             }
       ],
       "metadata": {
@@ -464,7 +576,7 @@
                   "name": "python",
                   "nbconvert_exporter": "python",
                   "pygments_lexer": "ipython3",
-                  "version": "3.11.6"
+                  "version": "3.11.4"
             }
       },
       "nbformat": 4,
