fix measures calculation issue

--- a/project.ipynb
+++ b/project.ipynb
@@ -480,7 +480,8 @@
                         "# Plot the trained Decision Tree\n",
                         "f = plt.figure(figsize=(48,48))\n",
                         "plot_tree(dectree, filled=True, rounded=True, \n",
-                        "          feature_names=list(X_train.columns))"
+                        "          feature_names=list(X_train.columns),\n",
+                        "          class_names=[\"Very Low\", \"Low\", \"Somewhat Low\", \"Somewhat High\", \"High\", \"Very High\"])"
                   ]
             },
             {
@@ -506,10 +507,10 @@
                         "\n",
                         "# Print the Accuracy Measures from the Confusion Matrix\n",
                         "cmTrain = confusion_matrix(y_train, y_train_pred)\n",
-                        "tpTrain = cmTrain[1][1] # True Positives : Good (1) predicted Good (1)\n",
-                        "fpTrain = cmTrain[0][1] # False Positives : Bad (0) predicted Good (1)\n",
-                        "tnTrain = cmTrain[0][0] # True Negatives : Bad (0) predicted Bad (0)\n",
-                        "fnTrain = cmTrain[1][0] # False Negatives : Good (1) predicted Bad (0)\n",
+                        "fpTrain = (cmTrain.sum(axis=0) - np.diag(cmTrain))\n",
+                        "fnTrain = (cmTrain.sum(axis=1) - np.diag(cmTrain))\n",
+                        "tpTrain = np.diag(cmTrain)\n",
+                        "tnTrain = cmTrain.sum() - (fpTrain + fnTrain + tpTrain)\n",
                         "\n",
                         "print(\"TPR Train :\\t\", (tpTrain/(tpTrain + fnTrain)))\n",
                         "print(\"TNR Train :\\t\", (tnTrain/(tnTrain + fpTrain)))\n",
@@ -519,8 +520,9 @@
                         "print(\"FNR Train :\\t\", (fnTrain/(tpTrain + fnTrain)))\n",
                         "\n",
                         "# Plot the two-way Confusion Matrix\n",
-                        "sb.heatmap(confusion_matrix(y_train, y_train_pred), \n",
-                        "           annot = True, fmt=\".0f\", annot_kws={\"size\": 18})"
+                        "sb.heatmap(cmTrain, annot = True, fmt=\".0f\", annot_kws={\"size\": 18},\n",
+                        "           xticklabels = [\"Very Low\", \"Low\", \"Somewhat Low\", \"Somewhat High\", \"High\", \"Very High\"],\n",
+                        "           yticklabels = [\"Very Low\", \"Low\", \"Somewhat Low\", \"Somewhat High\", \"High\", \"Very High\"])"
                   ]
             },
             {
@@ -529,9 +531,6 @@
                   "metadata": {},
                   "outputs": [],
                   "source": [
-                        "# Import the required metric from sklearn\n",
-                        "from sklearn.metrics import confusion_matrix\n",
-                        "\n",
                         "# Predict the Response corresponding to Predictors\n",
                         "y_test_pred = dectree.predict(X_test)\n",
                         "\n",
@@ -542,10 +541,10 @@
                         "\n",
                         "# Print the Accuracy Measures from the Confusion Matrix\n",
                         "cmTest = confusion_matrix(y_test, y_test_pred)\n",
-                        "tpTest = cmTest[1][1] # True Positives : Good (1) predicted Good (1)\n",
-                        "fpTest = cmTest[0][1] # False Positives : Bad (0) predicted Good (1)\n",
-                        "tnTest = cmTest[0][0] # True Negatives : Bad (0) predicted Bad (0)\n",
-                        "fnTest = cmTest[1][0] # False Negatives : Good (1) predicted Bad (0)\n",
+                        "fpTest = (cmTest.sum(axis=0) - np.diag(cmTest))\n",
+                        "fnTest = (cmTest.sum(axis=1) - np.diag(cmTest))\n",
+                        "tpTest = np.diag(cmTest)\n",
+                        "tnTest = cmTest.sum() - (fpTest + fnTest + tpTest)\n",
                         "\n",
                         "print(\"TPR Test :\\t\", (tpTest/(tpTest + fnTest)))\n",
                         "print(\"TNR Test :\\t\", (tnTest/(tnTest + fpTest)))\n",
@@ -555,8 +554,9 @@
                         "print(\"FNR Test :\\t\", (fnTest/(fnTest + tpTest)))\n",
                         "\n",
                         "# Plot the two-way Confusion Matrix\n",
-                        "sb.heatmap(confusion_matrix(y_test, y_test_pred), \n",
-                        "           annot = True, fmt=\".0f\", annot_kws={\"size\": 18})"
+                        "sb.heatmap(cmTest, annot = True, fmt=\".0f\", annot_kws={\"size\": 18},\n",
+                        "           xticklabels = [\"Very Low\", \"Low\", \"Somewhat Low\", \"Somewhat High\", \"High\", \"Very High\"],\n",
+                        "           yticklabels = [\"Very Low\", \"Low\", \"Somewhat Low\", \"Somewhat High\", \"High\", \"Very High\"])"
                   ]
             }
       ],
