fix the random_state

--- a/project.ipynb
+++ b/project.ipynb
@@ -471,7 +471,7 @@
                         "X = pd.DataFrame(sampled_dataset_ohe.drop('popularity_level', axis = 1))\n",
                         "\n",
                         "# Split the Dataset into Train and Test\n",
-                        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3)\n",
+                        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3, random_state = 7)\n",
                         "\n",
                         "# Decision Tree using Train Data\n",
                         "dectree = DecisionTreeClassifier(max_depth = 4)  # change max_depth to experiment\n",
