--- a/project.ipynb
+++ b/project.ipynb
@@ -558,6 +558,13 @@
                         "           xticklabels = [\"Very Low\", \"Low\", \"Somewhat Low\", \"Somewhat High\", \"High\", \"Very High\"],\n",
                         "           yticklabels = [\"Very Low\", \"Low\", \"Somewhat Low\", \"Somewhat High\", \"High\", \"Very High\"])"
                   ]
+            },
+            {
+                  "cell_type": "markdown",
+                  "metadata": {},
+                  "source": [
+                        "**Reflection** : There is a huge imbalance in the *False Positives* and *False Negatives* in the confusion matrix. *False Positives* are much higher in number than *False Negatives* in both Train and Test data. "
+                  ]
             }
       ],
       "metadata": {
