--- a/project.ipynb
+++ b/project.ipynb
@@ -573,7 +573,8 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "## Reflection for Refinement"
+                        "---\n",
+                        "## 6. Reflection for Refinement"
                   ]
             },
             {
@@ -616,7 +617,7 @@
                   "name": "python",
                   "nbconvert_exporter": "python",
                   "pygments_lexer": "ipython3",
-                  "version": "3.11.4"
+                  "version": "3.11.5"
             }
       },
       "nbformat": 4,
