--- a/project.ipynb
+++ b/project.ipynb
@@ -409,7 +409,14 @@
                   "metadata": {},
                   "source": [
                         "---\n",
-                        "## 5. Fitting Model 1 for prediction of popularity_level"
+                        "## 5. Fitting Model 1 for prediction of `popularity_level`"
+                  ]
+            },
+            {
+                  "cell_type": "markdown",
+                  "metadata": {},
+                  "source": [
+                        "### Pre-process data"
                   ]
             },
             {
@@ -418,7 +425,7 @@
                   "metadata": {},
                   "outputs": [],
                   "source": [
-                        "# Import the encoder from sklearn\n",
+                        "# Import the OneHotEncoder\n",
                         "from sklearn.preprocessing import OneHotEncoder\n",
                         "ohe = OneHotEncoder()\n",
                         "\n",
@@ -455,7 +462,7 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "### Create and Fit the Model"
+                        "### Create and Fit `dectree_1`"
                   ]
             },
             {
@@ -478,12 +485,12 @@
                         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3, random_state = 17)\n",
                         "\n",
                         "# Decision Tree using Train Data\n",
-                        "dectree = DecisionTreeClassifier(max_depth = 4)  # change max_depth to experiment\n",
-                        "dectree.fit(X_train, y_train)                    # train the decision tree model\n",
+                        "dectree_1 = DecisionTreeClassifier(max_depth = 6)  # change max_depth to experiment\n",
+                        "dectree_1.fit(X_train, y_train)                    # train the decision tree model\n",
                         "\n",
                         "# Plot the trained Decision Tree\n",
-                        "f = plt.figure(figsize=(48,48))\n",
-                        "plot_tree(dectree, filled=True, rounded=True, \n",
+                        "f = plt.figure(figsize=(72,72))\n",
+                        "plot_tree(dectree_1, filled=True, rounded=True, \n",
                         "          feature_names=list(X_train.columns),\n",
                         "          class_names=[\"Very Low\", \"Low\", \"Somewhat Low\", \"Somewhat High\", \"High\", \"Very High\"])"
                   ]
@@ -492,7 +499,7 @@
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "### Check the accuracy of the Model"
+                        "### Check the accuracy of `dectree_1`"
                   ]
             },
             {
@@ -501,12 +508,15 @@
                   "metadata": {},
                   "outputs": [],
                   "source": [
+                        "# Store the display texts of popularity levels in a list\n",
+                        "popularity_level_texts = [\"Very Low\", \"Low\", \"Somewhat Low\", \"Somewhat High\", \"High\", \"Very High\"]\n",
+                        "\n",
                         "# Predict the Response corresponding to Predictors\n",
-                        "y_train_pred = dectree.predict(X_train)\n",
+                        "y_train_pred = dectree_1.predict(X_train)\n",
                         "\n",
                         "# Print the Classification Accuracy\n",
                         "print(\"Train Data\")\n",
-                        "print(\"Accuracy  :\\t\", dectree.score(X_train, y_train))\n",
+                        "print(\"Accuracy  :\\t\", dectree_1.score(X_train, y_train))\n",
                         "print()\n",
                         "\n",
                         "# Print the Accuracy Measures from the Confusion Matrix\n",
@@ -522,14 +532,16 @@
                         "                        (fnTrain/(tpTrain + fnTrain))\n",
                         "                     ]),\n",
                         "                     index = [\"TPR\", \"TNR\", \"FPR\", \"FNR\"],\n",
-                        "                     columns = [\"Very Low\", \"Low\", \"Somewhat Low\", \"Somewhat High\", \"High\", \"Very High\"])\n",
+                        "                     columns = popularity_level_texts)\n",
                         "print(\"Train Accuracy and Error rates:\")\n",
                         "print(train_rates)\n",
                         "\n",
                         "# Plot the two-way Confusion Matrix\n",
-                        "sb.heatmap(cmTrain, annot = True, fmt=\".0f\", annot_kws={\"size\": 18},\n",
-                        "           xticklabels = [\"Very Low\", \"Low\", \"Somewhat Low\", \"Somewhat High\", \"High\", \"Very High\"],\n",
-                        "           yticklabels = [\"Very Low\", \"Low\", \"Somewhat Low\", \"Somewhat High\", \"High\", \"Very High\"])"
+                        "for i in range(6):\n",
+                        "      cm = np.array([[tnTrain[i], fpTrain[i]], [fnTrain[i], tpTrain[i]]])\n",
+                        "      sb.heatmap(cm, annot = True, fmt=\".0f\", annot_kws={\"size\": 18})\n",
+                        "      plt.text(0.5, -0.2, f'Confusion Matrix for \"{popularity_level_texts[i]}\" Level (Train)', fontsize=18, ha='center')\n",
+                        "      plt.show()"
                   ]
             },
             {
@@ -539,11 +551,11 @@
                   "outputs": [],
                   "source": [
                         "# Predict the Response corresponding to Predictors\n",
-                        "y_test_pred = dectree.predict(X_test)\n",
+                        "y_test_pred = dectree_1.predict(X_test)\n",
                         "\n",
                         "# Print the Classification Accuracy\n",
                         "print(\"Test Data\")\n",
-                        "print(\"Accuracy  :\\t\", dectree.score(X_test, y_test))\n",
+                        "print(\"Accuracy  :\\t\", dectree_1.score(X_test, y_test))\n",
                         "print()\n",
                         "\n",
                         "# Print the Accuracy Measures from the Confusion Matrix\n",
@@ -564,9 +576,11 @@
                         "print(test_rates)\n",
                         "\n",
                         "# Plot the two-way Confusion Matrix\n",
-                        "sb.heatmap(cmTest, annot = True, fmt=\".0f\", annot_kws={\"size\": 18},\n",
-                        "           xticklabels = [\"Very Low\", \"Low\", \"Somewhat Low\", \"Somewhat High\", \"High\", \"Very High\"],\n",
-                        "           yticklabels = [\"Very Low\", \"Low\", \"Somewhat Low\", \"Somewhat High\", \"High\", \"Very High\"])"
+                        "for i in range(6):\n",
+                        "      cm = np.array([[tnTest[i], fpTest[i]], [fnTest[i], tpTest[i]]])\n",
+                        "      sb.heatmap(cm, annot = True, fmt=\".0f\", annot_kws={\"size\": 18})\n",
+                        "      plt.text(0.5, -0.2, f'Confusion Matrix for \"{popularity_level_texts[i]}\" Level (Test)', fontsize=18, ha='center')\n",
+                        "      plt.show()"
                   ]
             },
             {
@@ -574,16 +588,21 @@
                   "metadata": {},
                   "source": [
                         "---\n",
-                        "## 6. Reflection for Refinement"
+                        "## 6. Reflection and Refinement"
                   ]
             },
             {
                   "cell_type": "markdown",
                   "metadata": {},
                   "source": [
-                        "Current issue: While TNR is desirably high, the value of TPR is relatiely low. This means that there are many missed positive cases as a low TPR indicated that a significant number of actual positive cases are being missed by the model, resulting in high false negatives from the sample. This is the direct result from the model having low accuracy rate on the test data sample.\n",
+                        "**Current issue**: For most categories, while *TNR* is desirably high, *TPR* is notably low, indicating that there are many positive cases predicted as false, resulting in high *false negatives* from the sample. This is the direct result from the model having low accuracy rate on the test data sample.\n",
                         "\n",
-                        "Solution: In order to resolve the problem and refine our model, we decide to decrease the number of popularity_levels from the current 6 levels to 3 levels, namely: high, medium and low. The levels are defined as follows: high (track_popularity > mean+sd), medium (mean-sd <= track_popularity <= mean+sd), (track_popularity < mean-sd). By lowering the number of levels, we hope to achieve higher accuracy rate."
+                        "**Solution**: In order to resolve the problem and refine our model, we decide to reduce the number of categories in `popularity_levels` from 6 to **2**, namely: `high` and `low`. The levels are defined as follows:\n",
+                        "\n",
+                        "- high: (`track_popularity < mean`)\n",
+                        "- low: (`track_popularity >= mean`)\n",
+                        "\n",
+                        "By lowering the number of levels, we hope to achieve higher accuracy rate."
                   ]
             },
             {
@@ -592,12 +611,133 @@
                   "metadata": {},
                   "outputs": [],
                   "source": [
-                        "# Check the ratio between the High \"family\" and Low \"family\" categories in popularity_level\n",
-                        "popularity_level_counts = sampled_dataset[\"popularity_level\"].value_counts(sort=False)\n",
-                        "low_popularity_level_count = popularity_level_counts[:3].sum()\n",
-                        "high_popularity_level_count = popularity_level_counts[3:].sum()\n",
-                        "print(\"Ratio of popularitylevel:\")\n",
-                        "print(\"High \\\"family\\\" : Low \\\"family\\\" =\", high_popularity_level_count, \":\", low_popularity_level_count)"
+                        "# Create the new column popularity_level_2 with 2 categories\n",
+                        "sampled_dataset_ohe[\"popularity_level_2\"] = pd.cut(sampled_dataset[\"track_popularity\"], bins=[0, medium, float('inf')], labels=[\"low\", \"high\"])\n",
+                        "sampled_dataset_ohe_2 = sampled_dataset_ohe.drop(\"popularity_level\", axis=1)"
+                  ]
+            },
+            {
+                  "cell_type": "code",
+                  "execution_count": null,
+                  "metadata": {},
+                  "outputs": [],
+                  "source": [
+                        "# Check the distribution of popularity_level_2\n",
+                        "popularity_level_2 = pd.DataFrame(sampled_dataset_ohe_2[\"popularity_level_2\"].value_counts(sort=False), columns=[\"count\"])\n",
+                        "popularity_level_2[\"density\"] = popularity_level_2[\"count\"] / len(sampled_dataset_ohe_2)\n",
+                        "popularity_level_2"
+                  ]
+            },
+            {
+                  "cell_type": "markdown",
+                  "metadata": {
+                        "slideshow": {
+                              "slide_type": "slide"
+                        }
+                  },
+                  "source": [
+                        "---\n",
+                        "## 7. Fitting Model 2 for prediction of `popularity_level_2`"
+                  ]
+            },
+            {
+                  "cell_type": "markdown",
+                  "metadata": {},
+                  "source": [
+                        "### Create and Fit `dectree_2`"
+                  ]
+            },
+            {
+                  "cell_type": "code",
+                  "execution_count": null,
+                  "metadata": {},
+                  "outputs": [],
+                  "source": [
+                        "# Extract Response and Predictors\n",
+                        "y = pd.DataFrame(sampled_dataset_ohe_2['popularity_level_2'])\n",
+                        "X = pd.DataFrame(sampled_dataset_ohe_2.drop('popularity_level_2', axis=1))\n",
+                        "\n",
+                        "# Split the Dataset into Train and Test with a fixed random_state\n",
+                        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3, random_state = 17)\n",
+                        "\n",
+                        "# Decision Tree using Train Data\n",
+                        "dectree_2 = DecisionTreeClassifier(max_depth = 6)  # change max_depth to experiment\n",
+                        "dectree_2.fit(X_train, y_train)                    # train the decision tree model\n",
+                        "\n",
+                        "# Plot the trained Decision Tree\n",
+                        "f = plt.figure(figsize=(72,72))\n",
+                        "plot_tree(dectree_2, filled=True, rounded=True, \n",
+                        "          feature_names=list(X_train.columns),\n",
+                        "          class_names=[\"Low\", \"High\"])"
+                  ]
+            },
+            {
+                  "cell_type": "markdown",
+                  "metadata": {},
+                  "source": [
+                        "### Check the accuracy of `dectree_2`"
+                  ]
+            },
+            {
+                  "cell_type": "code",
+                  "execution_count": null,
+                  "metadata": {},
+                  "outputs": [],
+                  "source": [
+                        "# Predict the Response corresponding to Predictors\n",
+                        "y_train_pred = dectree_2.predict(X_train)\n",
+                        "\n",
+                        "# Print the Classification Accuracy\n",
+                        "print(\"Train Data\")\n",
+                        "print(\"Accuracy  :\\t\", dectree_2.score(X_train, y_train))\n",
+                        "print()\n",
+                        "\n",
+                        "# Print the Accuracy Measures from the Confusion Matrix\n",
+                        "cmTrain = confusion_matrix(y_train, y_train_pred)\n",
+                        "tnTrain = cmTrain[0][0]\n",
+                        "tpTrain = cmTrain[1][1]\n",
+                        "fnTrain = cmTrain[1][0]\n",
+                        "fpTrain = cmTrain[0][1]\n",
+                        "print(\"TPR Train :\\t\", (tpTrain/(tpTrain + fnTrain)))\n",
+                        "print(\"TNR Train :\\t\", (tnTrain/(tnTrain + fpTrain)))\n",
+                        "print()\n",
+                        "\n",
+                        "print(\"FPR Train :\\t\", (fpTrain/(tnTrain + fpTrain)))\n",
+                        "print(\"FNR Train :\\t\", (fnTrain/(tpTrain + fnTrain)))\n",
+                        "\n",
+                        "# Plot the two-way Confusion Matrix\n",
+                        "sb.heatmap(cmTrain, annot = True, fmt=\".0f\", annot_kws={\"size\": 18})"
+                  ]
+            },
+            {
+                  "cell_type": "code",
+                  "execution_count": null,
+                  "metadata": {},
+                  "outputs": [],
+                  "source": [
+                        "# Predict the Response corresponding to Predictors\n",
+                        "y_test_pred = dectree_2.predict(X_test)\n",
+                        "\n",
+                        "# Print the Classification Accuracy\n",
+                        "print(\"Test Data\")\n",
+                        "print(\"Accuracy  :\\t\", dectree_2.score(X_test, y_test))\n",
+                        "print()\n",
+                        "\n",
+                        "# Print the Accuracy Measures from the Confusion Matrix\n",
+                        "cmTest = confusion_matrix(y_test, y_test_pred)\n",
+                        "tnTest = cmTest[0][0]\n",
+                        "tpTest = cmTest[1][1]\n",
+                        "fnTest = cmTest[1][0]\n",
+                        "fpTest = cmTest[0][1]\n",
+                        "print(\"TPR Test :\\t\", (tpTest/(tpTest + fnTest)))\n",
+                        "print(\"TNR Test :\\t\", (tnTest/(tnTest + fpTest)))\n",
+                        "print()\n",
+                        "\n",
+                        "print(\"FPR Test :\\t\", (fpTest/(tnTest + fpTest)))\n",
+                        "print(\"FNR Test :\\t\", (fnTest/(tpTest + fnTest)))\n",
+                        "\n",
+                        "# Plot the two-way Confusion Matrix\n",
+                        "sb.heatmap(cmTrain, annot = True, fmt=\".0f\", annot_kws={\"size\": 18})"
                   ]
             }
       ],
@@ -617,7 +757,7 @@
                   "name": "python",
                   "nbconvert_exporter": "python",
                   "pygments_lexer": "ipython3",
-                  "version": "3.11.5"
+                  "version": "3.11.6"
             }
       },
       "nbformat": 4,
